--- a/surveys/templates/surveys/home.html
+++ b/surveys/templates/surveys/home.html
@@ -45,8 +45,9 @@
     * { 
         font-family: Helvetica, Arial;
     }
-
-    
+    .healthBar {
+        color: green;
+    }
 
 </style>
 {% endblock css %}
@@ -274,11 +275,7 @@
                     $("<img id='npcFace"+ nameList[i] + "' src='" + getDynamicFace(emotionList[i]) + "' class='npcImage' />").appendTo("#npcParent" + (i+1));
 
                     $("<div id='" + nameList[i] + "Bar'> </div>").appendTo("#npcParent" + (i+1));
-                    // $("<div class='progress' id='" + nameList[i] + "Chart'> Hope </div>").appendTo("#" + nameList[i] + "Bar");
-                    // $('<div class="progress-bar" role="progressbar" aria-valuenow="50" aria-valuemin="0" aria-valuemax="100" style="width: 50%;"></div>').appendTo("#" + nameList[i] + "Chart");
-
-
-
+                    $("<progress id='health_" + nameList[i] + "' class='healthBar' value='100' max='100'></progress>").appendTo("#" + nameList[i] + "Bar");
 
                     // $("<dl style='width:100%' id='" + nameList[i] + "Chart' > </dl>").appendTo("#" + nameList[i] + "Bar");
                     // $("<dt id='joytext_" + nameList[i] + "'> Joy - " + getEmotionPercent(emotionList[i][0]) + "%</dt>").appendTo("#" + nameList[i] + "Chart");
