--- a/surveys/templates/surveys/home.html
+++ b/surveys/templates/surveys/home.html
@@ -244,7 +244,7 @@
         }
 
         function removeAnimate (nameList) {
-            for (var i = nameList.length - 1; i >= 0; i--) {
+            for (var i = nameList.length; i >= 0; i--) {
                 $('#npcParent' + i).removeClass('passAnimate');
             };   
         }
