--- a/surveys/static/css/custom.css
+++ b/surveys/static/css/custom.css
@@ -19,17 +19,17 @@ dt {
     }
 
     .goodrepu {
-        border: 5px solid green;
+        border: 5px solid #328332;
         border-radius: 5px;
     }
 
     .sosorepu {
-        border: 5px solid yellow;
+        border: 5px solid #beee0a;
         border-radius: 5px;
     }
 
     .badrepu {
-        border: 5px solid red;
+        border: 5px solid #cc2255;
         border-radius: 5px;
     }
 
